# ParamBuster

./: .gitignore  CONTRIBUTING.md  Dockerfile  ParamBuster.py  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  structure  usage.py
lists/: command_injection.txt  idor.txt  lfi.txt  open_redirect.txt  rce.txt  sqli.txt  ssrf.txt  xss.txt
tests/: __init__.py  test_basic.py
