[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parambuster"
version = "7.0.0"
description = "Advanced High-Performance Parameter Detection and Vulnerability Scanner"
authors = [{name = "ArkhAngelLifeJiggy"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests",
    "beautifulsoup4",
    "fake-useragent",
    "urllib3",
    "colorama",
    "selenium",
    "webdriver-manager",
]

[project.scripts]
parambuster = "ParamBuster:main"
