[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parambuster"
version = "7.0.0"
description = "The ultimate high-performance parameter discovery & vulnerability scanner. adaptive stability calibration, wildcard detection, and deep context-aware reflection analysis."
authors = [{name = "ArkhAngelLifeJiggy"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests",
    "beautifulsoup4",
    "fake-useragent",
    "urllib3",
    "colorama",
    "selenium",
    "webdriver-manager",
]

[project.scripts]
parambuster = "ParamBuster:main"
